# Project-Insight-TUI

./: .gitignore  README.md  main.py  pyproject.toml
elements/: add_user.py  add_user_screen.tcss  confirm_add_user.py  delete_user_screen.tcss  edit_user_screen.py  menu_screen.py  menu_screen.tcss  success_screen.tcss  view_user_screen.py
methods/: dynamoDB_methods.py
src/project-insight-TUI/: __main__.py
src/project-insight-TUI/elements/: Initialize_screen.tcss  add_user.py  confirm_add_user.py  confirm_add_user_screen.tcss  delete_user_screen.py  edit_user_screen.py  edit_user_screen.tcss  initialize_incomplete_credentials_screen.py  initialize_incomplete_credentials_screen.tcss  initialize_screen.py  menu_screen.py  menu_screen.tcss  success_screen.py  update_env_file_screen.tcss  view_user_screen.py  view_user_screen.tcss
src/project-insight-TUI/methods/: dynamoDB_methods.py  initialize_methods.py
src/project_insight_TUI/: __init__.py  __main__.py
src/project_insight_TUI/elements/: add_user.py  add_user_screen.tcss  check_individual_compliance_screen.py  check_individual_compliance_screen.tcss  confirm_add_user.py  confirm_add_user_screen.tcss  delete_user_screen.py  delete_user_screen.tcss  edit_user_screen.py  edit_user_screen.tcss  generate_report_screen.py  generate_report_screen.tcss  initialize_incomplete_credentials_screen.py  initialize_incomplete_credentials_screen.tcss  initialize_no_env_file_screen.py  initialize_no_env_file_screen.tcss  initialize_screen.py  menu_screen.py  menu_screen.tcss  report_generation_screen.py  report_generation_screen.tcss  send_sms_confirmation_screen.py  send_sms_confirmation_screen.tcss  send_sms_screen.py  send_sms_screen.tcss  success_screen.py  update_env_file_screen.py  view_user_screen.py  (+2 more)
(+3 files in other folders)
