[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-insight-tui"
version = "0.3.0"
description = "Project Insight TUI for SMS and Compliance Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.23",
    "python-dotenv>=0.9.9",
    "textual>=3.2.0",
]

[project.scripts]
insight = "project_insight_TUI.__main__:main"

[tool.hatch.build]
sources = ["src/project_insight_tui"]