[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-insight-tui"
version = "0.6.5c"
description = "Project Insight TUI for SMS and Compliance Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.23",
    "great-tables>=0.18.0",
    "numpy>=2.3.2",
    "polars>=1.32.0",
    "pylatex>=1.4.2",
    "python-dotenv>=0.9.9",
    "pytz>=2025.2",
    "reportlab>=4.4.3",
    "textual>=3.2.1",
    "textual-datepicker>=0.2.4",
]

[project.scripts]
insight = "project_insight_TUI.__main__:app"

[tool.hatch.build]
sources = ["src"]
